--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -31,7 +31,7 @@ jobs:
         sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
     - name: Build docker image
-      run: sudo docker build -d godot-discord-bot . -f Containerfile
+      run: sudo docker build -t godot-discord-bot . -f Containerfile
 
     - name: package docker image
       id: package_docker_image
