--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -37,6 +37,7 @@ jobs:
       id: package_docker_image
       run: |
         sudo docker save -o godot-discord-bot.tar godot-discord-bot
+        sudo chmod 777 godot-discord-bot.tar
         DOCKER_FILE=$(sudo ls godot-discord-bot.tar | sudo head -n 1)
         sudo echo "DOCKER_FILE=$DOCKER_FILE" >> $GITHUB_OUTPUT
 
