--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: test
+        run: 
+
       - uses: actions/checkout@v4
       - name: build the image
         run: docker build -t godot-discord-bot . -f Containerfile
@@ -26,7 +29,7 @@ jobs:
           files: ${{ steps.docker_image.outputs.DOCKER_FILE }}
           draft: false
           prerelease: false
-          tag_name: $(date +%s)
+          tag_name: $(date +%y-%m-%d_%H:%M)
           name: Automated docker image build
 
         env:
